data/stackoverflow-snippets/scala/1725
scala> implicit val str: String = ""hello""
str: String = hello

scala> implicit val str2: String = ""world""
str2: String = world

scala> val anotherStr: String = implicitly
<console>:16: error: ambiguous implicit values:
 both value StringCanBuildFrom in object Predef of type => 
scala.collection.generic.CanBuildFrom[String,Char,String]
 and method $conforms in object Predef of type [A]=> A <:< A
 match expected type T
       val anotherStr: String = implicitly
                                ^

scala>
